YAMLfiles/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-deployment
  labels:
    app: microservice-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-app
  template:
    metadata:
      labels:
        app: microservice-app
    spec:
      containers:
        - name: microservice-app
          image: gdkth/kth:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: my-docker-secret
