YAMLfiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-service
spec:
  selector:
    app: microservice-app
  ports:
    - port: 8080
      targetPort: 8080
